Revert to Jersey 2